k8s/firefox_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: firefox
  namespace: default
  labels:
    app: firefox
spec:
  containers:
    - name: firefox
      image: jlesage/firefox:latest
      ports:
        - containerPort: 5800
          protocol: TCP
