k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: axion-db-service
  labels:
    app: axion-db
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
  selector:
    app: axion-db
